fixed loyalty overflow

--- a/src/scss/cities.scss
+++ b/src/scss/cities.scss
@@ -94,7 +94,6 @@ body {
 h1 {
   font-size: 70px;
   font-weight: 700;
-  line-height: .1;
 }
 
 h3 {
